fix broken css from reactstrap upgrade

--- a/site/src/pages/skills/styles.css
+++ b/site/src/pages/skills/styles.css
@@ -12,7 +12,6 @@
 
 .skill-column .skill-pct-text {
     font-size: 1.75em;
-    position: absolute;
     top: 30px;
     left: 0;
     width: 100%;
@@ -46,7 +45,7 @@
     color: white;
     font-weight: bold;
     height: 35px;
-    background-color: #ddd;
+    background-color:#666;
 }
 
 .skill-bar canvas {
@@ -54,11 +53,6 @@
     height: 100%;
 }
 .skill-bar-text {
-    position: absolute;
-    top: 70;
-    left: 0;
-    font-size: smaller;
-    z-index: 1px;
 }
 
 .right-rounded {
